--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="photo-a" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Competitive</h1>
+                        <h1>Urban</h1>
                     </div>
                     <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
@@ -92,7 +92,7 @@
             <div id="photo-b" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Competitive</h1>
+                        <h1>Adventure</h1>
                     </div>
                     <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
@@ -118,7 +118,7 @@
             <div id="photo-d" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Competitive</h1>
+                        <h1>Luxury</h1>
                     </div>
                     <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
@@ -131,7 +131,7 @@
             <div id="photo-e" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Competitive</h1>
+                        <h1>Specialized</h1>
                     </div>
                     <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
