--- a/index.html
+++ b/index.html
@@ -85,59 +85,59 @@
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
-                        <a id="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="">Explore</a>
                     </div>
                 </div>
             </div>
             <div id="photo-b" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Adventure</h1>
+                        <h1>Continental</h1>
                     </div>
                     <div class="info">
-                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                        <p>Come hell or high water, these heavy-duty machines will take you anywhere.</p>
                     </div>
                     <div class="explore">
-                        <a id="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="">Explore</a>
                     </div>
                 </div>
             </div>
             <div id="photo-c" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Competitive</h1>
+                        <h1>Performance</h1>
                     </div>
                     <div class="info">
-                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                        <p>Designed to push engines past their limits, these beasts eat through air resistance and fuel in equal measure.</p>
                     </div>
                     <div class="explore">
-                        <a id="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="">Explore</a>
                     </div>
                 </div>
             </div>
             <div id="photo-d" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Luxury</h1>
+                        <h1>Vintage</h1>
                     </div>
                     <div class="info">
-                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                        <p>For those who seek a more classic experience, go down memory lane with these automobiles that aged like fine wine.</p>
                     </div>
                     <div class="explore">
-                        <a id="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="">Explore</a>
                     </div>
                 </div>
             </div>
             <div id="photo-e" class="illustration">
                 <div class="wrapper">
                     <div class="category">
-                        <h1>Specialized</h1>
+                        <h1>Components</h1>
                     </div>
                     <div class="info">
-                        <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
+                        <p>Everything you will ever need for your set of wheels, and then some. We've got it all, down to the last screw.</p>
                     </div>
                     <div class="explore">
-                        <a id="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="">Explore</a>
                     </div>
                 </div>
             </div>
