--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dosis:wght@200&family=Poiret+One&family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
@@ -75,6 +77,25 @@
         </div>
     </header>
     <main>
+        <div id="categories">
+            <div class="dot-box">
+                <div class="dots-3">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                <div class="dots-2">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                <div class="dots-1">
+                    <div class="dot"></div>
+                </div>
+            </div>
+            <h1>
+                DISCOVER OUR FINE SELECTION
+            </h1>
+        </div>
         <div class="accordion">
             <div id="photo-a" class="illustration">
                 <div class="wrapper">
@@ -85,7 +106,7 @@
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
                     </div>
                     <div class="explore">
-                        <a class="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
                 </div>
             </div>
@@ -98,7 +119,7 @@
                         <p>Come hell or high water, these heavy-duty machines will take you anywhere.</p>
                     </div>
                     <div class="explore">
-                        <a class="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +132,7 @@
                         <p>Designed to push engines past their limits, these beasts eat through air resistance and fuel in equal measure.</p>
                     </div>
                     <div class="explore">
-                        <a class="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +145,7 @@
                         <p>For those who seek a more classic experience, go down memory lane with these automobiles that aged like fine wine.</p>
                     </div>
                     <div class="explore">
-                        <a class="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
                 </div>
             </div>
@@ -137,11 +158,18 @@
                         <p>Everything you will ever need for your set of wheels, and then some. We've got it all, down to the last screw.</p>
                     </div>
                     <div class="explore">
-                        <a class="link-btn" href="">Explore</a>
+                        <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <div id="arrow">
+        <a href="#categories">
+            <span class="material-icons-round">
+                expand_more
+            </span>
+        </a>
+    </div>
 </body>
 </html>
