--- a/catalogue.html
+++ b/catalogue.html
@@ -31,37 +31,37 @@
                 </div>
                 <div class="carousel">
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                     <div class="card-image">
-
+                        <img src="media/2947979.jpg" alt="">
                     </div>
                 </div>
             </div>
