--- a/index.html
+++ b/index.html
@@ -176,16 +176,20 @@
     <script>
         const nodeList = document.querySelectorAll('.illustration');
         function flexIt(target){
-            console.log(target.style.flex);
-            const neighbor = document.querySelectorAll('.illustration');
+            let selectorString = "#"+target.id+" .wrapper";
             if (target.style.flex !== 10) {
                 target.style.flex = 10;
                 for (let i = 0; i < nodeList.length; i++) {
                     if ('slide'+i !== target.id) {
                         document.querySelector('#slide'+i).style.flex = 1;
+                        document.querySelector('#slide'+i+' '+'.wrapper').style.transform = 'translateX(-100%)';
+                        document.querySelector('#slide'+i+' '+'.wrapper').style.opacity = 0;
+                        document.querySelector('#slide'+i+' '+'.wrapper').style.backgroundColor = 'transparent';
                     }
                 }
-                console.log(target.style.flex);
+                document.querySelector(selectorString).style.transform = 'translateX(0)';
+                document.querySelector(selectorString).style.opacity = 1;
+                document.querySelector(selectorString).style.backgroundColor = '#ffffffcc';
             } else {
                 target.style.flex = 1;
             }
