--- a/matrix.html
+++ b/matrix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script
         src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -112,128 +112,24 @@
         <div id="menu">
             <div class="menu-bar">
                 <div id="search" class="spotlight">
-                    <button id="btn-search" class="menu-button" onclick="searchArray()">
+                    <button id="btn-search" class="menu-button">
                         <i class="fa fas fa-search fa-3x"></i>
                     </button>
                 </div>
                 <div id="generate" class="spotlight">
-                    <button id="btn-generate" class="menu-button" onclick="randomArray()">
+                    <button id="btn-generate" class="menu-button">
                         <i class="fa fas fa-random fa-3x"></i>
                     </button>
                 </div>
-                <div id="grid" class="spotlight" onclick="drawer()">
+                <div id="grid" class="spotlight">
                     <button id="btn-grid" class="menu-button">
                         <i class="fa fas fa-th fa-3x"></i>
                     </button>
                 </div>
                 <div id="clear" class="spotlight">
-                    <button id="btn-clear" class="menu-button" onclick="clearArray()">
+                    <button id="btn-clear" class="menu-button">
                         <i class="fa fas fa-times fa-3x"></i>
                     </button>
-                </div>
-            </div>
-            <div id="drawer">
-                <div id="wrapper">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
-                    <input name="" id="" class="arrayElement">
                 </div>
             </div>
         </div>
@@ -296,6 +192,5 @@
         );
 
     </script>
-    <script src="/js/matrix/matrix.js"></script>
 </body>
 </html>
