added theme toggle and partial theme functionality

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <h1>
-                DISCOVER OUR FINE SELECTION
+                PRODUCTS
             </h1>
         </div>
 
@@ -202,14 +202,14 @@
                 </div>
             </div>
             <h1>
-                DISCOVER OUR FINE SELECTION
+                BRANDS
             </h1>
         </div>
     </main>
 
     <!-- * Navigator -->
 
-    <div id="arrow">
+    <div id="nav-arrow">
         <a href="#section-0">
             <!--
             <span class="material-icons-round">
@@ -222,12 +222,21 @@
 
     <!-- * Widgets -->
 
-    <div id="drawer">
-        <div id="marker">
-            <i id="caret" class="fa fas fa-caret-left fa-3x"></i>
-        </div>
+    <div id="widget-0">
+        <span id="arrow" class="icon material-icons-outlined">
+            arrow_left
+        </span>
         <div id="toggle">
-            <button><i class="fa fas fa-moon fa-3x"></i></button>
+            <button id="dark" type="button">
+                <span class="icon material-icons-outlined">
+                    dark_mode
+                </span>
+            </button>
+            <button id="light" type="button">
+                <span class="icon material-icons-outlined">
+                    light_mode
+                </span>
+            </button>
         </div>
     </div>
     <script src="js/webworks.js"></script>
